add ad data collect

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "*.p4": "cpp",
         "*.v": "verilog",
         "*.bsv": "c",
-        "emv.h": "c"
+        "emv.h": "c",
+        "data.h": "c"
     }
 }
